test/files/neg/anyval-children-2.scala
@inline trait NotOkDingus1 extends AnyVal // fail
