test/files/neg/anyval-children-2.check
anyval-children-2.scala:1: error: Only @inline classes (not traits) are allowed to extend AnyVal
@inline trait NotOkDingus1 extends AnyVal // fail
              ^
one error found
